-Fix bad oppacity for alert when dark mode

--- a/src/components/Alert/Alert.module.scss
+++ b/src/components/Alert/Alert.module.scss
@@ -1,7 +1,7 @@
 $alert-default-color: #024084;
 $alert-default-bg: #cce5ff;
 $alert-success-color: #0f5134;
-$alert-success-bg: rgb(70 155 121 / 50%);
+$alert-success-bg: rgb(70 155 121);
 $alert-warning-color: #664d03;
 $alert-warning-bg: rgb(255, 243, 205);
 $alert-danger-color: #841f2b;
